--- a/Assignment/templates/chatroom.html
+++ b/Assignment/templates/chatroom.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
+{% if current_user %}
+<div class="profile">
+    <h3 class="profile_text">Logged in as: {{ current_user.username }}</h3>
+    <h3 class="profile_text">You are: {{ current_user.role.value }}</h3>
+</div>
+{% endif %}
 <div class="message-box-container">
     <div class="message-box">
         <h2>Chat Room: {{code}}</h2>
