--- a/Assignment/templates/post.html
+++ b/Assignment/templates/post.html
@@ -8,6 +8,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
 </head>
 <body>
+    {% if current_user %}
+        <div class="profile">
+            <h3 class="profile_text">Logged in as: {{ current_user.username }}</h3>
+            <h3 class="profile_text">You are: {{ role }}</h3>
+        </div>
+    {% endif %}
     <div class="background-select-container">
         <select id="background-select">
             <option value="default">Pink</option>
@@ -16,47 +22,64 @@
             <option value="background3">Green</option>
         </select>
     </div>
-    <div class="box-container">
-        <div class="box" data-post-id="{{ post.id }}">
-            <div class="user-info">
-                <h1>{{ post.poster.username }}
-                    {% if role %}
-                        <span class="role">{{ post.poster.role.value }}</span>
-                    {% endif %}
-                    :
-                </h1>
-            </div>
-            <div class="post-title" contenteditable="true">
-                <h1>{{ post.title }}</h1>
-            </div>
-            <div class="post-content" contenteditable="true">
-                <p>{{ post.content }}</p>
-            </div>
-            <div class="buttons">
+    {% if post %}
+        <div class="box-container">
+            <div class="box" data-post-id="{{ post.id }}">
+                <div class="user-info">
+                    <h1>{{ post.poster.username }}
+                        {% if role %}
+                            <span class="role">{{ post.poster.role.value }}</span>
+                        {% endif %}
+                        :
+                    </h1>
+                </div>
                 {% if current_user.username == post.poster.username or current_user.role.value != 'STUDENT' %}
-                    {% if current_user.role.value != 'STUDENT' %}
-                        <button onclick="handleDelete()">Delete</button>
-                    {% endif %}
-                    <button onclick="handleChange()">Modify</button>
+                    <div class="post-title" contenteditable="true">
+                        <h1>{{ post.title }}</h1>
+                    </div>
+                    <div class="post-content" contenteditable="true">
+                        <p>{{ post.content }}</p>
+                    </div>
+                {% else %}
+                    <div class="post-title">
+                        <h1>{{ post.title }}</h1>
+                    </div>
+                    <div class="post-content">
+                        <p>{{ post.content }}</p>
+                    </div>
                 {% endif %}
-            </div>
-            <div class="comment-section">
-                <textarea id="comment-input" placeholder="Enter your comment here..."></textarea>
-                <button onclick="sendComment()">Send</button>
-                <button onclick="goBack()">Back</button>
-            </div>
-            <div class="comments-container">
-                {% for comment in post.comments %}
-                <div class="comment" data-comment-id="{{ comment.id }}">
-                    <p><strong>{{ comment.user.username }}:</strong> {{ comment.content }}</p>
-                    {% if current_user.role.value != 'STUDENT' %}
-                        <button onclick="deleteComment('{{ comment.id }}')">Delete</button>
+                <div class="buttons">
+                    {% if current_user.username == post.poster.username or current_user.role.value != 'STUDENT' %}
+                        <button onclick="handleDelete()">Delete</button>
+                        <button onclick="handleChange()">Modify</button>
                     {% endif %}
                 </div>
-                {% endfor %}
+                <div class="comment-section">
+                    {% if banned == False %}
+                        <textarea id="comment-input" placeholder="Enter your comment here..."></textarea>
+                        <button onclick="sendComment()">Send</button>
+                    {% endif %}
+                    <button onclick="goBack()">Back</button>
+                </div>
+                <div class="comments-container">
+                    {% for comment in post.comment %}
+                    <div class="comment" data-comment-id="{{ comment.id }}">
+                        <p><strong>{{ comment.user_name }} <span class="role">{{ post.poster.role.value }}</span>:</strong> {{ comment.content }}</p>
+                        {% if current_user.role.value != 'STUDENT' or current_user.username == comment.user_name %}
+                            <button onclick="deleteComment('{{ comment.id }}')">Delete</button>
+                        {% endif %}
+                    </div>
+                    {% endfor %}
+                </div>
             </div>
         </div>
-    </div>
+    {% else %}
+        <script>
+            alert('Article has been deleted');
+            window.location.href = "/Knowledge-repository";
+        </script>
+    {% endif %}
+</body>
     <script type="text/javascript">
         var socketio = io();
 
@@ -100,13 +123,14 @@
                 return;
             }
             socketio.emit('change_content', { id: postId, title: title, content: content });
-            location.reload();
+            socketio.emit('rt')
+            // location.reload();
         }
 
         function handleDelete() {
             var postId = document.querySelector('.box').getAttribute('data-post-id');
             socketio.emit('deletePost', { id: postId });
-            location.reload();
+            socketio.emit('rt')
         }
 
         function sendComment() {
@@ -138,6 +162,7 @@
                 newComment.innerHTML += `<button onclick="deleteComment('${data.comment_id}')">Delete</button>`;
             }
             commentsContainer.appendChild(newComment);
+            socketio.emit('rt')
         });
 
         socketio.on('comment_deleted', function(data) {
@@ -147,6 +172,13 @@
             }
         });
 
+        socketio.on('reload', function(){
+            flash();
+        })
+
+        function flash(){
+            location.reload();
+        }
+
     </script>
-</body>
 </html>
